--- a/Assignment2_python_getting_started.ipynb
+++ b/Assignment2_python_getting_started.ipynb
@@ -3,8 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Assignment2_python_getting_started.ipynb",
+      "name": "Copy of Assignment2_python_getting_started.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,15 +87,42 @@
       "source": [
         "def reverse_number(num):\n",
         "    # you code goes here --\n",
+        "    reversed = int(str(num)[::-1])\n",
         "    \n",
-        "    \n",
-        "    \n",
-        "    \n",
-        "    \n",
-        "    return num"
+        "    return reversed\n"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zbALJDCpPCHE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a9499206-7b1c-4321-c35e-8bacee4cc77e"
+      },
+      "source": [
+        "reverse_number(2426)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6242"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -132,21 +161,43 @@
       "metadata": {
         "colab_type": "code",
         "id": "8ngdJGK3b4vU",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "7b7c1f36-8323-4457-858d-0d2f54072732"
       },
       "source": [
         "count = input(\"Enter the number of transactions: \")\n",
+        "sum = 0\n",
         "for i in range(int(count)):\n",
         "    transaction = input(\"Transaction: \")\n",
         "    # write your code here onwards p.s. you can also change this structure to achieve required objective\n",
-        "    \n",
-        "    \n",
+        "    print(transaction[2:])\n",
+        "    if(transaction[0] == \"D\"):\n",
+        "        sum += float(transaction[2:])\n",
+        "    elif(transaction[0] == \"W\"):\n",
+        "        sum -= float(transaction[2:])\n",
+        "print(\"The net amout of the bacnk account: {}\".format(sum))\n",
         "    \n",
         "    \n",
         "    "
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter the number of transactions: 2\n",
+            "Transaction: D 200\n",
+            "200\n",
+            "Transaction: W 200\n",
+            "200\n",
+            "The net amout of the bacnk account: 0.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -184,20 +235,92 @@
       "metadata": {
         "colab_type": "code",
         "id": "zh0NwwSab4vZ",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 368
+        },
+        "outputId": "fa8df82a-74b2-4069-9c29-11e1df3bac05"
       },
       "source": [
+        "# import the random library\n",
+        "import random\n",
+        "from urllib2 import urlopen\n",
+        "\n",
         "def get_word():\n",
-        "    file = open()\n",
         "    # you code goes here\n",
         "    \n",
+        "    file = urlopen(\"http://norvig.com/ngrams/sowpods.txt\").read()\n",
+        "\n",
+        "     # read all the list of words\n",
+        "    words = []\n",
+        "    with file as f:\n",
+        "      line = f.readline().strip()\n",
+        "      words.append(line)\n",
+        "      while line:\n",
+        "        line = f.readline().strip()\n",
+        "        words.append(line)\n",
         "    \n",
-        "    \n",
-        "    \n",
-        "    return word"
+        "    # generate a random number\n",
+        "    random_index = random.randint(0, len(words))\n",
+        "      \n",
+        "    # take the word\n",
+        "    print(\"Random word: \", words[random_index])\n",
+        "    # return word\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        " \n",
+        "\n",
+        "\n",
+        "\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-92-bbd937b63d76>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# import the random library\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0murllib2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0murlopen\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_word\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'urllib2'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "02jaUZt4hvAO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 283
+        },
+        "outputId": "b76f16dc-b0df-462c-83fb-7cd794e6c9a2"
+      },
+      "source": [
+        "get_word()"
+      ],
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-88-83d4fced3e86>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_word\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-87-5c4e943253ff>\u001b[0m in \u001b[0;36mget_word\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_word\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mfile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'https://drive.google.com/file/d/1TtVFxwdMUpg5imtEGcIjsWet0sxKGaJn/view?usp=sharing'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;31m# you code goes here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'https://drive.google.com/file/d/1TtVFxwdMUpg5imtEGcIjsWet0sxKGaJn/view?usp=sharing'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -240,18 +363,56 @@
       "metadata": {
         "colab_type": "code",
         "id": "gSqU2xRLb4vf",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 255
+        },
+        "outputId": "caef1782-a39e-4b30-e0ab-b61808f70a23"
       },
       "source": [
+        "import operator\n",
+        "\n",
         "text = input(\"Enter your text here: \\n\")\n",
         "# your code goes here\n",
+        "freq_dict = {}\n",
         "\n",
+        "for i in text.split(' '):\n",
+        "    if i not in freq_dict:\n",
+        "        freq_dict[i] = 1\n",
+        "    elif i in freq_dict:\n",
+        "        freq_dict[i] = freq_dict[i] + 1\n",
+        "    else:\n",
+        "        pass\n",
         "\n",
+        "sorted_freq_dict = sorted(freq_dict.items(), key = operator.itemgetter(0))\n",
+        "print(sorted_freq_dict)\n",
         "\n",
-        "print(output)"
+        "for i in sorted_freq_dict:\n",
+        "    print(i[0]+\":\", i[1])"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter your text here: \n",
+            "New to Python or choosing between Python 2 and Python 3? Read Python 2 or Python 3.\n",
+            "[('2', 2), ('3.', 1), ('3?', 1), ('New', 1), ('Python', 5), ('Read', 1), ('and', 1), ('between', 1), ('choosing', 1), ('or', 2), ('to', 1)]\n",
+            "2: 2\n",
+            "3.: 1\n",
+            "3?: 1\n",
+            "New: 1\n",
+            "Python: 5\n",
+            "Read: 1\n",
+            "and: 1\n",
+            "between: 1\n",
+            "choosing: 1\n",
+            "or: 2\n",
+            "to: 1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -299,13 +460,53 @@
       "metadata": {
         "colab_type": "code",
         "id": "YgE1DnDDb4vl",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "6b6d6c24-2990-4a7d-f023-c922db3bc05d"
       },
       "source": [
-        "# Your solution goes here."
+        "# Your solution goes here.\n",
+        "\n",
+        "import re\n",
+        "passwords= input(\"Input your password: \")\n",
+        "passwords = passwords.split(\",\")\n",
+        "\n",
+        "accepted_pass = []\n",
+        "for i in passwords:\n",
+        "    \n",
+        "    if len(i) < 6 or len(i) > 12:\n",
+        "        continue\n",
+        "\n",
+        "    elif not re.search(\"([a-z])+\", i):\n",
+        "        continue\n",
+        "\n",
+        "    elif not re.search(\"([A-Z])+\", i):\n",
+        "        continue\n",
+        "\n",
+        "    elif not re.search(\"([0-9])+\", i):\n",
+        "        continue\n",
+        "\n",
+        "    elif not re.search(\"([!@$%^&])+\", i):\n",
+        "        continue\n",
+        "\n",
+        "    else:\n",
+        "        accepted_pass.append(i)\n",
+        "\n",
+        "print((\" \").join(accepted_pass))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Input your password: ABd1234@1,a F1#,2w3E*,2We3345\n",
+            "ABd1234@1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
